--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,16 +17,16 @@
   "TUTORIAL_SKIP_BUTTON" : "Skip",
   "TUTORIAL_CONTINUE_BUTTON" : "Continue",
 
-  "TUTORIAL_SLIDE1_TITLE": "Welcome to the Ionic Super Starter",
-  "TUTORIAL_SLIDE1_DESCRIPTION": "The <b>Ionic Super Starter</b> is a fully-featured Ionic starter with many pre-built pages and best practices.",
+  "TUTORIAL_SLIDE1_TITLE": "Welcome to Gonevis",
+  "TUTORIAL_SLIDE1_DESCRIPTION": "GoNevis is a professional site and blog publishing platform. From simple personal blogging to professional publication web sites.",
 
   "TUTORIAL_SLIDE2_TITLE": "How to use the Super Starter",
   "TUTORIAL_SLIDE2_DESCRIPTION": "Assemble the various page types you want and remove the ones you don't. We've provided many common mobile app page layouts, like login and signup pages, tabs, and this tutorial page.",
 
-  "TUTORIAL_SLIDE3_TITLE": "Getting Started",
-  "TUTORIAL_SLIDE3_DESCRIPTION": "Need help? Check out the Super Starter README for a full tutorial",
+  "TUTORIAL_SLIDE3_TITLE": "Free Subdomain",
+  "TUTORIAL_SLIDE3_DESCRIPTION": "Get a free subdomain registered under gonevis.com",
 
-  "TUTORIAL_SLIDE4_TITLE": "Ready to Play?",
+  "TUTORIAL_SLIDE4_TITLE": "Ready to Start?",
 
   "WELCOME_INTRO" : "The starting point for your next great Ionic app",
 
@@ -43,7 +43,7 @@
   "WELCOME_TITLE": "Welcome",
 
   "LOGIN_TITLE": "Sign in",
-  "LOGIN_ERROR": "Unable to sign in. Please check your account information and try again.",
+  "LOGIN_ERROR": "Unable to login with provided credentials.",
   "LOGIN_BUTTON": "Sign in",
   "SIGNUP_TITLE": "Sign up",
   "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
