Fix logout on fa trans

--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -7,7 +7,7 @@
   "PASSWORD": "رمز عبور",
   "LOGIN": "ورود",
   "SIGNUP": "ثبت نام",
-  "LOGOUT": "ثبت نام",
+  "LOGOUT": "خروج",
 
   "TUTORIAL_SKIP_BUTTON" : "رد کن",
   "TUTORIAL_CONTINUE_BUTTON" : "ادامه",
