Add Reader translation to both English and Farsi

--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -51,6 +51,7 @@
   "POSTS": "پست ها",
   "TAGS": "برچسب ها",
   "FILES": "فایل ها",
+  "READER": "خواندنی ها",
   "SETTINGS": "تنظیمات",
   "SITES": "سایت ها"
 }
