--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -56,6 +56,7 @@
   "POSTS": "Posts",
   "TAGS": "Tags",
   "FILES": "Files",
+  "READER": "Reader",
   "SETTINGS": "Settings",
   "SITES": "Sites"
 }
