--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,12 +37,12 @@
 
   "WELCOME_TITLE": "Welcome",
 
-  "LOGIN_TITLE": "Sign in",
+  "LOGIN_TITLE": "Log in",
   "LOGIN_ERROR": "Unable to login with provided credentials.",
-  "LOGIN_BUTTON": "Sign in",
+  "LOGIN_BUTTON": "Log in",
   "SIGNUP_TITLE": "Sign up",
   "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
-  "SIGNUP_BUTTON": "Sign up",
+  "SIGNUP_BUTTON": "Create Account",
 
   "DONE_BUTTON" : "Done",
   "CANCEL_BUTTON" : "Cancel",
